# fauxhttp

./: .gitignore  .pre-commit-config.yaml  development.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: test.yml
httpretty/: __init__.py  compat.py  core.py  errors.py  http.py  version.py
src/httpretty/: core.py  http.py  utils.py
tests/bugfixes/: test_242_ssl_bad_handshake.py  test_387_regex_port.py  test_388_unmocked_error_with_url.py  test_413_regex.py  test_414_httpx.py  test_416_boto3.py  test_417_openssl.py  test_425_latest_requests.py  test_426_mypy_segfault.py  test_430_respect_timeout.py  test_eventlet.py  test_redis.py  test_tornado_bind_unused_port.py
tests/functional/: base.py  test_bypass.py  test_debug.py  test_decorator.py  test_fakesocket.py  test_httplib2.py  test_passthrough.py  test_requests.py  test_urllib2.py  testserver.py
tests/functional/fixtures/: playback-1.json
tests/pyopenssl/: test_mock.py
tests/unit/: test_core.py  test_http.py  test_httpretty.py  test_main.py
